hphp/hack/test/typecheck/functions_without_body.php.exp
File "functions_without_body.php", line 12, characters 39-39:
Non-native functions must have a body (Parsing[1002])
