hphp/hack/test/typecheck/functions_without_body.php
<?hh
/**
 * Copyright (c) 2022, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function function_without_body(): void;
